<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingEnd="@dimen/dp16"
              android:paddingStart="@dimen/dp16">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/cardview_default_corner_radius"
            app:cardElevation="@dimen/cardview_default_elavation"
            android:layout_marginTop="@dimen/dp16">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="@dimen/dp16">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_recipes_name">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_view_recipes_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableStart="@drawable/ic_kitchen_black_24dp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_recipes_desc">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_view_recipes_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp10"
                        android:drawableStart="@drawable/ic_kitchen_black_24dp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
            style="@style/TextTheme.Title.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/recipes_play_url"
            android:layout_marginTop="@dimen/dp16"/>

    <!--<androidx.recyclerview.widget.RecyclerView-->
    <!--android:id="@+id/recycler_view_recipes_categories"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"/>-->
    <ImageView
            android:id="@+id/image_view_play_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:contentDescription="@string/lbl_recipes_link"/>

    <TextView android:id="@+id/text_view_play_url"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"/>
</LinearLayout>